Preventing code blocks from getting too tall.

--- a/style_guide/css/global.css
+++ b/style_guide/css/global.css
@@ -58,7 +58,10 @@ pre {
   border: 1px solid #ddd;
   border-radius: 3px;
   padding: 20px;
+
   overflow-x: auto;
+  overflow-y: auto;
+  max-height: 300px;
 }
 
 /*
